# AI-Image-Recognition-Hub

./: LICENSE  README.md  index_gui.py  model_gui.py  pyproject.toml  requirements.txt
src/ai_image_recognition_hub/: __init__.py  apply_models.py  index_gui.py  model_gui.py
